using jumbotrons, glyphicons
My contribution

--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
         <img src="https://raw.githubusercontent.com/Diviee/Group_72/a64a5756d1792187a0341be2a641a8873664814d/Materials/images/illustration-hero.svg">
 
         <div class="jumbotron">
-          <h1 class="display-5">Order Summary</h1>
+          <h2 class="Summary-bold">Order Summary</h2>
           <p class="lead">You can now listen to millions of songs,<br/>
             audiobooks, and podcasts on any device <br/>
             anywhere you like!</p>
             <p class="glyphicon glyphicon-music" aria-hidden="true">
-                <strong> Annual Plan</strong><div> $59.99/year</div>
+                <strong> Annual Plan</strong><div> $59.99/year</div> <div><a href="change.com">change</a></div>
             </p>
-          <a class="btn btn-primary btn-lg" href="payment.com">Proceed to Payment</a>
+           
+          <a id="payment" class="btn btn-primary btn-lg" href="payment.com"><span class="white">Proceed to Payment</span></a>
 
           <div>
             <a class="btn btn-default btn-sm" href="cancel.com">Cancel order</a>    
           </div>
+
+
       </div>
     </div>
 </body>
