--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 <div class="small-box">
     <img class="icon" src="icon-music.svg" alt="icon-music">
     <p><b>Annual Plan</b><br>$59.99/year</p> 
-    <p></p>
     <a href="" class="link" >change</a>
 </div>
 
 <input class="button" type="submit" value="Proceed to Payment" name="proceed/btn">
 <br>
-<input class="button" type="submit" value="Cancel Order" name="Cancel/btn">
+<input class="button1" type="submit" value="Cancel Order" name="Cancel/btn">
     </div>
     
 </div>
